--- a/www/map.html
+++ b/www/map.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="jquery.ui.timepicker.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="jquery.ui.timepicker.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8M8hxvNymZavj2R3hkN5ERfbBLp9c3J8&callback=initMap" async defer></script>
   </head>
   <body onload="load_data()">
     <div id="map"></div>
+    <div id="control_panel">
+      <input type="text" id="datepicker"><br>
+      <input type="text" id="timepicker"><br>
+      <button id="dateselect" onclick="setDate()">PEACH</button>
+    <div>
   </body>
 </html>
 
