#32 setting time offset

--- a/www/map.html
+++ b/www/map.html
@@ -19,7 +19,7 @@
       <input type="text" id="datepicker"><br>
       <input type="text" id="timepicker"><br>
       <button id="prev_time"><<</button>
-      <button id="dateselect" onclick="setDate()">PEACH</button>
+      <button id="dateselect" onclick="load_data()">PEACH</button>
       <button id="next_time">>></button>
     <div>
   </body>
