#32 adding grafana link

--- a/www/map.html
+++ b/www/map.html
@@ -25,7 +25,10 @@
       <button id="metric_rssi" onclick="$('#metric').val('rssi'); load_data();">RSSI</button>
       <button id="metric_pdr" onclick="$('#metric').val('pdr'); load_data();">PDR</button>
       <input type="hidden" id="metric" value="pdr">
-    <div>
+    </div>
+    <div id="links">
+      <a href="https://sol.paris.inria.fr/" target="_blank"><img src="grafana.png"></a>
+    </div>
   </body>
 </html>
 
