--- a/www/map.html
+++ b/www/map.html
@@ -11,7 +11,7 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script type="text/javascript" src="map.js"></script>
     <script type="text/javascript" src="jquery.ui.timepicker.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8M8hxvNymZavj2R3hkN5ERfbBLp9c3J8&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8M8hxvNymZavj2R3hkN5ERfbBLp9c3J8&callback=initMap&libraries=geometry" async defer></script>
   </head>
   <body>
     <div id="map"></div>
