#35 user can now tell the solmanager to update

--- a/www/admin.html
+++ b/www/admin.html
@@ -13,7 +13,9 @@
   <body onload="load_sites()">
     <br>
     <div class="container" role="main">
-      <div id="site_list" class="row">
+      <div id="site_list" class="row"></div>
+      <div class="row">
+        <div id="feedback" class="well"></div>
       </div>
     </div>
   </body>
