--- a/www/map.html
+++ b/www/map.html
@@ -19,7 +19,7 @@
       <input type="text" id="datepicker"><br>
       <input type="text" id="timepicker"><br>
       <button id="prev_time"><<</button>
-      <button id="dateselect" onclick="load_data(0)">PEACH</button>
+      <button id="dateselect" onclick="load_data(0)">Load</button>
       <button id="next_time">>></button>
       <br><br>
       <button id="metric_rssi" onclick="$('#metric').val('rssi'); load_data();">RSSI</button>
